# cookiecutter

./: .flake8  .pre-commit-config.yaml  .prettierignore  AUTHORS.rst  LICENSE  LICENSE.rst  README.md  README.rst  cookiecutter.json  environment.yml  pyproject.toml  run_cookiecutter_example.py  test_utils.py
.codespell/: ignore_lines.txt
.github/workflows/: build-wheel-release-upload.yml  check-news-item.yml  matrix-and-codecov-on-merge-to-main.yml  publish-docs-on-release.yml  tests-on-pr.yml
doc/: Makefile
doc/source/: conda-forge-guide.rst  conda_forge_guide.rst  conf.py  cookiecutter-guide.rst  cookiecutter_guide.rst  frequently-asked-questions.rst  frequently_aksed_questions.rst  frequently_asked_questions.rst  getting-started.rst  getting_started.rst  index.rst  preliminaries.rst  release-guide.rst  release_guide.rst  test_examples.py
hooks/: post_gen_project.py
news/: add-py-env.rst  better-user-input.rst  cli-entry-point.rst  codecov.rst  conda-forge-doc.rst  cookiecut.rst  demo-gif.rst  doc-python-version.rst  docformatter.rst  dynamic-template.rst  faq-docs-github-namespace.rst  field-list.rst  frequently-asked-questions.rst  getting-started.rst  import-package-dir.rst  links.rst  migrate-cookiecutter.rst  migrate-release.rst  prettier.rst  scikit-package.rst  statement-of-need.rst  test-precommit-render.rst
requirements/: conda.txt
src/: __init__.py  version.py
src/bg_cookiecutter/: __init__.py  cli.py  version.py
src/scikit_package/: __init__.py  version.py
tests/: test_version.py
{{ cookiecutter.github_repo_name }}/: AUTHORS.rst  README.rst  environment.yml  pyproject.toml
{{ cookiecutter.github_repo_name }}/doc/: Makefile
{{ cookiecutter.github_repo_name }}/doc/source/: conf.py  index.rst
{{ cookiecutter.github_repo_name }}/doc/source/api/: {{ cookiecutter.package_dir_name }}.example_package.rst  {{ cookiecutter.package_dir_name }}.rst
{{ cookiecutter.github_repo_name }}/src/{{ cookiecutter.package_dir_name }}/: __init__.py  version.py
{{ cookiecutter.repo_name }}/: .codecov.yml  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.rst  MANIFEST.in  README.rst  environment.yml  pyproject.toml  setup.py
{{ cookiecutter.repo_name }}/.codespell/: ignore_lines.txt  ignore_words.txt
{{ cookiecutter.repo_name }}/.github/ISSUE_TEMPLATE/: bug_feature.md  release_checklist.md
{{ cookiecutter.repo_name }}/.github/workflows/: check-news-item.yml  codecov-on-merge-to-main.yml  codecov.yml  docs.yml  main.yml  matrix-and-codecov-on-merge-to-main.yml  publish-docs-on-release.yml  test.yml  tests-on-pr.yml
{{ cookiecutter.repo_name }}/doc/: Makefile
{{ cookiecutter.repo_name }}/doc/source/: conf.py  index.rst  license.rst
{{ cookiecutter.repo_name }}/doc/source/api/: {{ cookiecutter.package_dir_name }}.example_package.rst  {{ cookiecutter.package_dir_name }}.rst
{{ cookiecutter.repo_name }}/docs/: Makefile
{{ cookiecutter.repo_name }}/docs/source/: conf.py
{{ cookiecutter.repo_name }}/requirements/: README.txt  test.txt
{{ cookiecutter.repo_name }}/src/diffpy/{{ cookiecutter.project_short_name }}/: __init__.py  version.py
{{ cookiecutter.repo_name }}/src/diffpy/{{ cookiecutter.project_short_name }}/tests/: debug.py  run.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_dir_name }}/: __init__.py  version.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_dir_name }}/tests/: __init__.py  debug.py  run.py
{{ cookiecutter.repo_name }}/tests/: test_version.py
