[build-system]
requires = ["setuptools>=62.0", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_name }}"
dynamic=['version']
authors = [
  { name="Simon J.L. Billinge group", email="simon.billinge@gmail.com" },
]
maintainers = [
  { name="Simon J.L. Billinge group", email="simon.billinge@gmail.com" },
]
description = "{{ cookiecutter.project_short_description }}"
{%- set keywords_list = (cookiecutter.keywords.split(',') if cookiecutter.keywords.strip() else []) %}
keywords = {{ keywords_list }}
readme = "README.rst"
requires-python = ">={{ cookiecutter.minimum_supported_python_version }}"
classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: BSD License',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: Microsoft :: Windows',
        'Operating System :: POSIX',
        'Operating System :: Unix',
        {%- if cookiecutter.minimum_supported_python_version|length == 3 -%} # Parse cookiecutter min version variable
                {%- set min_version = cookiecutter.minimum_supported_python_version[-1] | int -%}
        {%- elif cookiecutter.minimum_supported_python_version|length == 4 -%}
                {%- set min_version = cookiecutter.minimum_supported_python_version[-2:] | int -%}
        {%- else -%}
                {%- set min_version = 8 -%} # Choose 3.8 as a failsafe
        {%- endif -%}
        {%- for version in [8, 9, 10, 11, 12] -%}
                {%- if version >= min_version %}
        'Programming Language :: Python :: 3.{{ version }}',
        {%- endif -%}
        {% endfor %}
        'Topic :: Scientific/Engineering :: Physics',
]

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_org }}/{{ cookiecutter.project_name }}/"
Issues = "https://github.com/{{ cookiecutter.github_org }}/{{ cookiecutter.project_name }}/issues/"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}"
dirty_template = "{tag}"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["{{ cookiecutter.project_name }}.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.black]
line-length = 115
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.rst
  | \.txt
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''
