[build-system]
requires = ["setuptools>=62.0", "setuptools-git-versioning>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.package_dist_name }}"
dynamic=['version', 'dependencies']
authors = [
  { name="{{ cookiecutter.project_owner_name }}", email="{{ cookiecutter.project_owner_email }}" },
]
maintainers = [
  { name="{{ cookiecutter.project_owner_name }}", email="{{ cookiecutter.project_owner_email }}" },
]
description = "{{ cookiecutter.project_short_description }}"
{%- set keywords_list = (cookiecutter.keywords.split(',') if cookiecutter.keywords.strip() else []) -%}
{%- set ns = namespace(keywords_trim = []) -%}
{%- for keyword in keywords_list -%}
{%- set _ = ns.keywords_trim.append(keyword.strip()) -%}
{%- endfor %}
keywords = {{ ns.keywords_trim }}
readme = "README.rst"
requires-python = ">={{ cookiecutter.minimum_supported_python_version }}, <{{ '{:.2f}'.format(cookiecutter.maximum_supported_python_version | float + 0.01) }}"
classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: BSD License',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: Microsoft :: Windows',
        'Operating System :: POSIX',
        'Operating System :: Unix',
        {%- set min_version = cookiecutter.minimum_supported_python_version.split('.')[1] | int -%}
        {%- set max_version = cookiecutter.maximum_supported_python_version.split('.')[1] | int -%}
        {%- for version in range(min_version, max_version+1) %}
        'Programming Language :: Python :: 3.{{ version }}',
        {%- endfor %}
        'Topic :: Scientific/Engineering :: Physics',
        'Topic :: Scientific/Engineering :: Chemistry',
]

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_org }}/{{ cookiecutter.repo_name }}/"
Issues = "https://github.com/{{ cookiecutter.github_org }}/{{ cookiecutter.repo_name }}/issues/"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}"
dirty_template = "{tag}"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/pip.txt"]}

[tool.codespell]
exclude-file = ".codespell/ignore_lines.txt"
ignore-words = ".codespell/ignore_words.txt"
skip = "*.cif,*.dat"

[tool.black]
line-length = 115
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.rst
  | \.txt
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''
